ots-notes/ots-hastebin-pastes-archive/atavukakon.txt
$ bundle install --path vendor/bundle
Fetching gem metadata from http://rubygems.org/............
Fetching version metadata from http://rubygems.org/...
Fetching dependency metadata from http://rubygems.org/..
Resolving dependencies...
Using rake 0.9.6
Using Platform 0.4.0
Using open4 1.3.0
Using RedCloth 4.2.9
Using multi_json 1.6.0
Using builder 3.0.4
Using i18n 0.6.1
Using erubis 2.7.0
Using rack 1.3.10
Using hike 1.2.1
Using tilt 1.3.3
Using mime-types 1.21
Using polyglot 0.3.3
Using arel 2.2.3
Using tzinfo 0.3.35
Using addressable 2.2.8
Using ansi 1.4.3
Using bcrypt-ruby 3.0.1
Using bundler 1.13.6
Using cancan 1.6.9
Using highline 1.6.15
Using net-ssh 2.9.1
Using nokogiri 1.5.6
Using ffi 1.3.1
Using rubyzip 0.9.9
Using websocket 1.0.7
Using hashie 2.1.2
Using json 1.6.1 from source at `vendor/bundle/ruby/2.3.0/gems/json-1.6.1`
Using mixlib-log 1.6.0
Using diff-lcs 1.2.4
Using mixlib-cli 1.5.0
Using mixlib-config 2.2.1
Using mixlib-shellout 1.6.1
Using ipaddress 0.8.0
Using systemu 2.5.2
Using yajl-ruby 1.2.1
Using coderay 1.1.0
Using method_source 0.8.2
Using slop 3.6.0
Using chronic 0.3.0
Using closure-compiler 1.1.8
Using daemons 1.1.9
Using fastercsv 1.5.5
Using json_pure 1.8.6 (was 1.7.7)
Using stringex 1.5.1
Using uuidtools 2.1.3
Using orm_adapter 0.0.7
Using net-ldap 0.2.2
Using thor 0.14.6
Using dm-paperclip 2.4.1 from http://github.com/Snorby/dm-paperclip.git (at master@f3101cc)
Using ruby-graphviz 1.0.8
Installing eventmachine 1.0.0 with native extensions
Using pdfkit 0.4.6
Using geoip 1.1.2
Using getopt 1.4.1
Using gmaps4rails 1.5.6
Using home_run 1.0.7
Using minitest 4.6.0
Using moneta 0.6.0
Using net-dns 0.6.1
Using netaddr 1.5.0
Using request_store 1.0.5
Installing rmagick 2.13.2 with native extensions
Using rspec-core 2.0.1
Using simple_form 1.2.2
Using snmp 1.1.0
Using whois 2.7.0
Using will_paginate 3.0.4
Using POpen4 0.1.4
Using activesupport 3.1.11
Using rack-cache 1.2
Using rack-mount 0.8.3
Using rack-test 0.6.2
Using warden 1.2.1
Using rack-ssl 1.3.3
Using puma 1.6.3
Using sprockets 2.0.4
Using rest-client 1.6.9
Using treetop 1.4.12
Using dm-core 1.2.0
Using data_objects 0.10.12
Using turn 0.9.6
Using net-scp 1.0.4
Using net-sftp 2.0.5
Using net-ssh-gateway 1.1.0
Using xpath 1.0.0
Using childprocess 0.3.8
Using rdoc 3.12.1
Using chef-zero 2.0.2
Using mixlib-authentication 1.3.0
Using rspec-expectations 2.0.1
Using ohai 7.0.4
Using pry 0.10.3
Gem::Ext::BuildError: ERROR: Failed to build gem native extension.

current directory:
/home/kfogel/private/work/ots/clients/onshore/r/onshore-snorby/vendor/bundle/ruby/2.3.0/gems/eventmachine-1.0.0/ext
/usr/bin/ruby2.3 -r ./siteconf20170513-14901-8xyd7w.rb extconf.rb
checking for rb_trap_immediate in ruby.h,rubysig.h... no
checking for rb_thread_blocking_region()... no
checking for inotify_init() in sys/inotify.h... yes
checking for writev() in sys/uio.h... yes
checking for rb_thread_check_ints()... yes
checking for rb_time_new()... yes
checking for sys/event.h... no
checking for epoll_create() in sys/epoll.h... yes
creating Makefile

To see why this extension failed to compile, please check the mkmf.log which can be found here:

/home/kfogel/private/work/ots/clients/onshore/r/onshore-snorby/vendor/bundle/ruby/2.3.0/extensions/x86_64-linux/2.3.0/eventmachine-1.0.0/mkmf.log

current directory:
/home/kfogel/private/work/ots/clients/onshore/r/onshore-snorby/vendor/bundle/ruby/2.3.0/gems/eventmachine-1.0.0/ext
make "DESTDIR=" clean

current directory:
/home/kfogel/private/work/ots/clients/onshore/r/onshore-snorby/vendor/bundle/ruby/2.3.0/gems/eventmachine-1.0.0/ext
make "DESTDIR="
compiling binder.cpp
compiling cmain.cpp
compiling ed.cpp
compiling em.cpp
em.cpp: In member function ‘bool EventMachine_t::_RunEpollOnce()’:
em.cpp:532:65: error: ‘rb_thread_select’ was not declared in this scope
  if ((ret = rb_thread_select(epfd + 1, &fdreads, NULL, NULL, &tv)) < 1) {
                                                                 ^
em.cpp:573:37: error: ‘rb_thread_select’ was not declared in this scope
   EmSelect (0, NULL, NULL, NULL, &tv);
                                     ^
em.cpp: In member function ‘int SelectData_t::_Select()’:
em.cpp:825:67: error: ‘rb_thread_select’ was not declared in this scope
  return EmSelect (maxsocket+1, &fdreads, &fdwrites, &fderrors, &tv);
                                                                   ^
em.cpp: In member function ‘bool EventMachine_t::_RunSelectOnce()’:
em.cpp:964:40: error: ‘rb_thread_select’ was not declared in this scope
      EmSelect (0, NULL, NULL, NULL, &tv);
                                        ^
em.cpp: In member function ‘void EventMachine_t::SignalLoopBreaker()’:
em.cpp:282:34: warning: ignoring return value of ‘ssize_t write(int, const void*, size_t)’, declared with attribute
warn_unused_result [-Wunused-result]
  write (LoopBreakerWriter, "", 1);
                                  ^
em.cpp: In member function ‘void EventMachine_t::_ReadLoopBreaker()’:
em.cpp:1011:50: warning: ignoring return value of ‘ssize_t read(int, void*, size_t)’, declared with attribute
warn_unused_result [-Wunused-result]
  read (LoopBreakerReader, buffer, sizeof(buffer));
                                                  ^
Makefile:231: recipe for target 'em.o' failed
make: *** [em.o] Error 1

make failed, exit code 2

Gem files will remain installed in
/home/kfogel/private/work/ots/clients/onshore/r/onshore-snorby/vendor/bundle/ruby/2.3.0/gems/eventmachine-1.0.0 for
inspection.
Results logged to
/home/kfogel/private/work/ots/clients/onshore/r/onshore-snorby/vendor/bundle/ruby/2.3.0/extensions/x86_64-linux/2.3.0/eventmachine-1.0.0/gem_make.out

An error occurred while installing eventmachine (1.0.0), and Bundler cannot continue.
Make sure that `gem install eventmachine -v '1.0.0'` succeeds before bundling.
$ 